--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^4.1.5",
-    "@mantine/dropzone": "^4.1.5",
-    "@mantine/form": "^4.1.5",
-    "@mantine/hooks": "^4.1.5",
-    "@mantine/modals": "^4.1.5",
-    "@mantine/notifications": "^4.1.5",
-    "@mantine/prism": "^4.1.5",
-    "@mantine/rte": "^4.1.5",
-    "@mantine/spotlight": "^4.1.5",
+    "@mantine/core": "^4.2.1",
+    "@mantine/dropzone": "^4.2.1",
+    "@mantine/form": "^4.2.1",
+    "@mantine/hooks": "^4.2.1",
+    "@mantine/modals": "^4.2.1",
+    "@mantine/notifications": "^4.2.1",
+    "@mantine/prism": "^4.2.1",
+    "@mantine/rte": "^4.2.1",
+    "@mantine/spotlight": "^4.2.1",
+    "@radix-ui/react-icons": "^1.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.1",
+    "@testing-library/user-event": "^14.1.1",
+    "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
