--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,6 +1,11 @@
 {
     "presets": [
-        "env",
-        "stage-0"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": "3.0.0"
+        }
+      ]
     ]
-}
+  }
