--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "graphql-server",
+  "name": "server",
   "version": "1.0.0",
-  "description": "graphql server project",
-  "main": "./src/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js --exec babel-node -e js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "babel-node server.js"
   },
-  "author": "akrsh24",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^15.0.3",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
-  },
   "dependencies": {
-    "apollo-server-express": "^2.24.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.8",
-    "nodemon": "^2.0.7"
+    "apollo-datasource-mongodb": "^0.5.4",
+    "apollo-server": "^3.9.0",
+    "dotenv": "^16.0.1",
+    "graphql": "^15.8.0",
+    "mongoose": "^6.4.0",
+    "nodemon": "^2.0.18",
+    "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/node": "^7.18.5",
+    "@babel/preset-env": "^7.18.2"
   }
 }
